--- a/asset-manager-topgear-Structured/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
+++ b/asset-manager-topgear-Structured/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
@@ -1,14 +1,14 @@
 
 <nav role="navigation" class="navbar navbar-default">
-	<div class="">
-		<a href="http://www.javaguides.net" class="navbar-brand">Java Guides</a>
-	</div>
 	<div class="navbar-collapse">
 		<ul class="nav navbar-nav">
 			<li class="active"><a href="/home">Home</a></li>
 		</ul>
 		<ul class="nav navbar-nav">
 			<li><a href="/logout">Logout</a></li>
+		</ul>
+		<ul class="nav navbar-nav" >
+			<li ><a>Welcome ${user.username}!!</a></li>
 		</ul>
 	</div>
 </nav>
