--- a/asset-manager-topgear-Structured/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
+++ b/asset-manager-topgear-Structured/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
@@ -8,7 +8,7 @@
 			<li><a href="/logout">Logout</a></li>
 		</ul>
 		<ul class="nav navbar-nav" >
-			<li ><a>Welcome ${user.username}!!</a></li>
+			<li id = "lblUserName"><a>Welcome ${user.username}!!</a></li>
 		</ul>
 	</div>
 </nav>
